fix user DTO
