# internal/dto/user/user_create.go
@@ -1,13 +1,0 @@
-package user
-
-type UserCreateRequest struct {
-	Name     string `json:"name" binding:"required"`
-	Password string `json:"password" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-}
-
-type UserCreateResponse struct {
-	ID    uint64 `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
