# internal/dto/user/user_detail_response.go
@@ -1,7 +1,0 @@
-package user
-
-type UserDetailResponse struct {
-	ID    uint64 `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
